@startuml
left to right direction
skinparam linetype ortho
hide circle

entity users {
  +id: int <<PK>>
  --
  +username: text
  +password_hash: text
  +created_at: datetime
}

entity game {
  +id: int <<PK>>
  --
  +start_time: int
  +end_time: int
}

entity user_game {
  +user_id: int <<FK>> <<PK>>
  +game_id: int <<FK>> <<PK>>
}

entity user_buy_in {
  +id: int <<PK>>
  --
  +user_id: int <<FK>>
  +game_id: int <<FK>>
  +buy_in_number: int
  +amount: int
  +timestamp: int
  +joined_round: int
}

entity game_round {
  +id: int <<PK>>
  --
  +game_id: int <<FK>>
  +timestamp: int
  +community_cards: text
  +pot: int
  +game_stage: int
}

entity user_round {
  +id: int <<PK>>
  --
  +round_id: int <<FK>>
  +user_id: int <<FK>>
  +cards: text
  +hand_type: text
  +final_action: text
  +contributed: int
}

entity round_winner {
  +round_id: int <<FK>> <<PK>>
  +user_id: int <<FK>> <<PK>>
  --
  +amount_won: int
}

' Relationships
users ||--o{ user_game
game  ||--o{ user_game

users ||--o{ user_buy_in
game  ||--o{ user_buy_in

game  ||--o{ game_round

game_round ||--o{ user_round
users      ||--o{ user_round

game_round ||--o{ round_winner
users      ||--o{ round_winner

@enduml
